--- a/new_printer/shop/templates/shop/home.html
+++ b/new_printer/shop/templates/shop/home.html
@@ -18,10 +18,10 @@
 	<div class="home-banner pr w">
 		<ul class="clearfix pr home-slider">
 			<li>
-				<a href="#"><img src="/static/images/shop/banner1.png" alt="" /></a>
+				<a href="#"><img src="/static/images/shop/banner1.jpg" alt="" /></a>
 			</li>
 			<li>
-				<a href="#"><img src="/static/images/shop/banner2.png" alt="" /></a>
+				<a href="#"><img src="/static/images/shop/banner2.jpg" alt="" /></a>
 			</li>
 		</ul>
 		<span class="h-b-btn h-b-l pa"></span>
