--- a/new_printer/shop/templates/shop/sign.html
+++ b/new_printer/shop/templates/shop/sign.html
@@ -30,7 +30,7 @@
 		<div class="container clearfix">
 			<div class="sign-cont fl">
 				<div class="banner-word mb50">
-					<span></span>
+					<img src="{% static 'images/shop/banner-word.png' %}" alt="" />
 					<p class="mt10">在这里，定制任何你想要的首饰</p>
 				</div>
 				<a class="contact-btn tc inl-b" href="javascript:void(0)">联系我们获得内测邀请码</a>
